--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="map_key_user_location_description">user location</string>
     <string name="map_location_loading">Loading position…</string>
 
+    <string name="query_not_populated_toast">Query parameters not set</string>
 </resources>
